--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 
 body{
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 
@@ -114,20 +114,23 @@ body{
 	width: 5%;
 }
 
-.carousel-control-prev,
-.carousel-control-next,
-.carousel-control-prev:hover,
-.carousel-control-prev:active,
-.carousel-control-next:active,
-.carousel-control-next:hover
-{
-  color: #000;
-}
+
 
 .carousel-item{
 	padding: 100px;
 }
 
 .footer{
-	font-size: 12px;
+	font-size: 9px;
+	background: #5d8986;
+	color: #f2f2f2;
+}
+
+.skill-head{
+	font-weight: 300;
+}
+
+.project-head a{
+	text-decoration: none;
+	color: #3eb300;
 }
