--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,43 @@ body{
 	text-decoration: none;
 	color: #3eb300;
 }
+
+
+.project-card{
+	background: #4060a5;
+	width: 100%;
+	transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+}
+
+.project-card:hover{
+	box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.09);
+}
+
+.project-card .card-body{
+	text-align: center;
+}
+
+.project-card .technology{
+	font-size: 12px;
+}
+
+.project-card .desc{
+	font-weight: 300;
+}
+
+.project-card .date{
+	font-size: 13px;
+	color: #d9d9d9;
+}
+
+.project-card a{
+	text-decoration: none;
+	color: #839ccf;
+}
+
+.project-card .card-title{
+	font-weight: 300;
+}
